constantine-rust/constantine-sys/src/bindings32.rs

extern "C" {
    pub fn ctt_pallas_fp_set_one(a: *mut pallas_fp);
}
extern "C" {
    pub fn ctt_pallas_fp_set_minus_one(a: *mut pallas_fp);
}
extern "C" {
    pub fn ctt_pallas_fp_neg(r: *mut pallas_fp, a: *const pallas_fp);
}
extern "C" {
    pub fn ctt_pallas_fp_neg_in_place(a: *mut pallas_fp);
}
extern "C" {
    pub fn ctt_pallas_fp_sum(r: *mut pallas_fp, a: *const pallas_fp, b: *const pallas_fp);
}
extern "C" {
    pub fn ctt_pallas_fp_add_in_place(a: *mut pallas_fp, b: *const pallas_fp);
}
extern "C" {
    pub fn ctt_pallas_fp_diff(r: *mut pallas_fp, a: *const pallas_fp, b: *const pallas_fp);
}
extern "C" {
    pub fn ctt_pallas_fp_sub_in_place(a: *mut pallas_fp, b: *const pallas_fp);
}
extern "C" {
    pub fn ctt_pallas_fp_double(r: *mut pallas_fp, a: *const pallas_fp);
}
extern "C" {
    pub fn ctt_pallas_fp_double_in_place(a: *mut pallas_fp);
}
extern "C" {
    pub fn ctt_pallas_fp_prod(r: *mut pallas_fp, a: *const pallas_fp, b: *const pallas_fp);
}
extern "C" {
    pub fn ctt_pallas_fp_mul_in_place(a: *mut pallas_fp, b: *const pallas_fp);
}
extern "C" {
    pub fn ctt_pallas_fp_square(r: *mut pallas_fp, a: *const pallas_fp);
}
extern "C" {
    pub fn ctt_pallas_fp_square_in_place(a: *mut pallas_fp);
}
extern "C" {
    pub fn ctt_pallas_fp_div2(a: *mut pallas_fp);
}
extern "C" {
    pub fn ctt_pallas_fp_inv(r: *mut pallas_fp, a: *const pallas_fp);
}
extern "C" {
    pub fn ctt_pallas_fp_inv_in_place(a: *mut pallas_fp);
}
extern "C" {
    pub fn ctt_pallas_fp_ccopy(a: *mut pallas_fp, b: *const pallas_fp, ctl: secret_bool);
}
extern "C" {
    pub fn ctt_pallas_fp_cswap(a: *mut pallas_fp, b: *mut pallas_fp, ctl: secret_bool);
}
extern "C" {
    pub fn ctt_pallas_fp_cset_zero(a: *mut pallas_fp, ctl: secret_bool);
}
extern "C" {
    pub fn ctt_pallas_fp_cset_one(a: *mut pallas_fp, ctl: secret_bool);
}
extern "C" {
    pub fn ctt_pallas_fp_cneg_in_place(a: *mut pallas_fp, ctl: secret_bool);
}
extern "C" {
    pub fn ctt_pallas_fp_cadd_in_place(a: *mut pallas_fp, b: *const pallas_fp, ctl: secret_bool);
}
extern "C" {
    pub fn ctt_pallas_fp_csub_in_place(a: *mut pallas_fp, b: *const pallas_fp, ctl: secret_bool);
}
extern "C" {
    pub fn ctt_pallas_fp_is_square(a: *const pallas_fp) -> secret_bool;
}
extern "C" {
    pub fn ctt_pallas_fp_invsqrt(r: *mut pallas_fp, a: *const pallas_fp);
}
extern "C" {
    pub fn ctt_pallas_fp_invsqrt_in_place(r: *mut pallas_fp, a: *const pallas_fp) -> secret_bool;
}
extern "C" {
    pub fn ctt_pallas_fp_sqrt_in_place(a: *mut pallas_fp);
}
extern "C" {
    pub fn ctt_pallas_fp_sqrt_if_square_in_place(a: *mut pallas_fp) -> secret_bool;
}
extern "C" {
    pub fn ctt_pallas_fp_sqrt_invsqrt(
        sqrt: *mut pallas_fp,
        invsqrt: *mut pallas_fp,
        a: *const pallas_fp,
    );
}
extern "C" {
    pub fn ctt_pallas_fp_sqrt_invsqrt_if_square(
        sqrt: *mut pallas_fp,
        invsqrt: *mut pallas_fp,
        a: *const pallas_fp,
    ) -> secret_bool;
}
extern "C" {
    pub fn ctt_pallas_fp_sqrt_ratio_if_square(
        r: *mut pallas_fp,
        u: *const pallas_fp,
        v: *const pallas_fp,
    ) -> secret_bool;
}
extern "C" {
    pub fn ctt_pallas_ec_aff_is_eq(P: *const pallas_ec_aff, Q: *const pallas_ec_aff)
        -> secret_bool;
}
extern "C" {
    pub fn ctt_pallas_ec_aff_is_neutral(P: *const pallas_ec_aff) -> secret_bool;
}
extern "C" {
    pub fn ctt_pallas_ec_aff_set_neutral(P: *mut pallas_ec_aff);
}
extern "C" {
    pub fn ctt_pallas_ec_aff_ccopy(
        P: *mut pallas_ec_aff,
        Q: *const pallas_ec_aff,
        ctl: secret_bool,
    );
}
extern "C" {
    pub fn ctt_pallas_ec_aff_is_on_curve(x: *const pallas_fp, y: *const pallas_fp) -> secret_bool;
}
extern "C" {
    pub fn ctt_pallas_ec_aff_neg(P: *mut pallas_ec_aff, Q: *const pallas_ec_aff);
}
extern "C" {
    pub fn ctt_pallas_ec_aff_neg_in_place(P: *mut pallas_ec_aff);
}
extern "C" {
    pub fn ctt_pallas_ec_jac_is_eq(P: *const pallas_ec_jac, Q: *const pallas_ec_jac)
        -> secret_bool;
}
extern "C" {
    pub fn ctt_pallas_ec_jac_is_neutral(P: *const pallas_ec_jac) -> secret_bool;
}
extern "C" {
    pub fn ctt_pallas_ec_jac_set_neutral(P: *mut pallas_ec_jac);
}
extern "C" {
    pub fn ctt_pallas_ec_jac_ccopy(
        P: *mut pallas_ec_jac,
        Q: *const pallas_ec_jac,
        ctl: secret_bool,
    );
}
extern "C" {
    pub fn ctt_pallas_ec_jac_neg(P: *mut pallas_ec_jac, Q: *const pallas_ec_jac);
}
extern "C" {
    pub fn ctt_pallas_ec_jac_neg_in_place(P: *mut pallas_ec_jac);
}
extern "C" {
    pub fn ctt_pallas_ec_jac_cneg_in_place(P: *mut pallas_ec_jac, ctl: secret_bool);
}
extern "C" {
    pub fn ctt_pallas_ec_jac_sum(
        r: *mut pallas_ec_jac,
        P: *const pallas_ec_jac,
        Q: *const pallas_ec_jac,
    );
}
extern "C" {
    pub fn ctt_pallas_ec_jac_add_in_place(P: *mut pallas_ec_jac, Q: *const pallas_ec_jac);
}
extern "C" {
    pub fn ctt_pallas_ec_jac_diff(
        r: *mut pallas_ec_jac,
        P: *const pallas_ec_jac,
        Q: *const pallas_ec_jac,
    );
}
extern "C" {
    pub fn ctt_pallas_ec_jac_double(r: *mut pallas_ec_jac, P: *const pallas_ec_jac);
}
extern "C" {
    pub fn ctt_pallas_ec_jac_double_in_place(P: *mut pallas_ec_jac);
}
extern "C" {
    pub fn ctt_pallas_ec_jac_affine(dst: *mut pallas_ec_aff, src: *const pallas_ec_jac);
}
extern "C" {
    pub fn ctt_pallas_ec_jac_from_affine(dst: *mut pallas_ec_jac, src: *const pallas_ec_aff);
}
extern "C" {
    pub fn ctt_pallas_ec_jac_batch_affine(
        dst: *const pallas_ec_aff,
        src: *const pallas_ec_jac,
        n: usize,
    );
}
extern "C" {
    pub fn ctt_pallas_ec_jac_scalar_mul_big_coef(P: *mut pallas_ec_jac, scalar: *const big255);
}
extern "C" {
    pub fn ctt_pallas_ec_jac_scalar_mul_fr_coef(P: *mut pallas_ec_jac, scalar: *const pallas_fr);
}
extern "C" {
    pub fn ctt_pallas_ec_jac_scalar_mul_big_coef_vartime(
        P: *mut pallas_ec_jac,
        scalar: *const big255,
    );
}
extern "C" {
    pub fn ctt_pallas_ec_jac_scalar_mul_fr_coef_vartime(
        P: *mut pallas_ec_jac,
        scalar: *const pallas_fr,
    );
}
extern "C" {
    pub fn ctt_pallas_ec_jac_multi_scalar_mul_big_coefs_vartime(
        r: *mut pallas_ec_jac,
        coefs: *const big255,
        points: *const pallas_ec_aff,
        len: usize,
    );
}
extern "C" {
    pub fn ctt_pallas_ec_jac_multi_scalar_mul_fr_coefs_vartime(
        r: *mut pallas_ec_jac,
        coefs: *const pallas_fr,
        points: *const pallas_ec_aff,
        len: usize,
    );
}
extern "C" {
    pub fn ctt_pallas_ec_prj_is_eq(P: *const pallas_ec_prj, Q: *const pallas_ec_prj)
        -> secret_bool;
}
extern "C" {
    pub fn ctt_pallas_ec_prj_is_neutral(P: *const pallas_ec_prj) -> secret_bool;
}
extern "C" {
    pub fn ctt_pallas_ec_prj_set_neutral(P: *mut pallas_ec_prj);
}
extern "C" {
    pub fn ctt_pallas_ec_prj_ccopy(
        P: *mut pallas_ec_prj,
        Q: *const pallas_ec_prj,
        ctl: secret_bool,
    );
}
extern "C" {
    pub fn ctt_pallas_ec_prj_neg(P: *mut pallas_ec_prj, Q: *const pallas_ec_prj);
}
extern "C" {
    pub fn ctt_pallas_ec_prj_neg_in_place(P: *mut pallas_ec_prj);
}
extern "C" {
    pub fn ctt_pallas_ec_prj_cneg_in_place(P: *mut pallas_ec_prj, ctl: secret_bool);
}
extern "C" {
    pub fn ctt_pallas_ec_prj_sum(
        r: *mut pallas_ec_prj,
        P: *const pallas_ec_prj,
        Q: *const pallas_ec_prj,
    );
}
extern "C" {
    pub fn ctt_pallas_ec_prj_add_in_place(P: *mut pallas_ec_prj, Q: *const pallas_ec_prj);
}
extern "C" {
    pub fn ctt_pallas_ec_prj_diff(
        r: *mut pallas_ec_prj,
        P: *const pallas_ec_prj,
        Q: *const pallas_ec_prj,
    );
}
extern "C" {
    pub fn ctt_pallas_ec_prj_double(r: *mut pallas_ec_prj, P: *const pallas_ec_prj);
}
extern "C" {
    pub fn ctt_pallas_ec_prj_double_in_place(P: *mut pallas_ec_prj);
}
extern "C" {
    pub fn ctt_pallas_ec_prj_affine(dst: *mut pallas_ec_aff, src: *const pallas_ec_prj);
}
extern "C" {
    pub fn ctt_pallas_ec_prj_from_affine(dst: *mut pallas_ec_prj, src: *const pallas_ec_aff);
}
extern "C" {
    pub fn ctt_pallas_ec_prj_batch_affine(
        dst: *const pallas_ec_aff,
        src: *const pallas_ec_prj,
        n: usize,
    );
}
extern "C" {
    pub fn ctt_pallas_ec_prj_scalar_mul_big_coef(P: *mut pallas_ec_prj, scalar: *const big255);
}
extern "C" {
    pub fn ctt_pallas_ec_prj_scalar_mul_fr_coef(P: *mut pallas_ec_prj, scalar: *const pallas_fr);
}
extern "C" {
    pub fn ctt_pallas_ec_prj_scalar_mul_big_coef_vartime(
        P: *mut pallas_ec_prj,
        scalar: *const big255,
    );
}
extern "C" {
    pub fn ctt_pallas_ec_prj_scalar_mul_fr_coef_vartime(
        P: *mut pallas_ec_prj,
        scalar: *const pallas_fr,
    );
}
extern "C" {
    pub fn ctt_pallas_ec_prj_multi_scalar_mul_big_coefs_vartime(
        r: *mut pallas_ec_prj,
        coefs: *const big255,
        points: *const pallas_ec_aff,
        len: usize,
    );
}
extern "C" {
    pub fn ctt_pallas_ec_prj_multi_scalar_mul_fr_coefs_vartime(
        r: *mut pallas_ec_prj,
        coefs: *const pallas_fr,
        points: *const pallas_ec_aff,
        len: usize,
    );
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct vesta_fr {
    limbs: [secret_word; 8usize],
}
#[test]
fn bindgen_test_layout_vesta_fr() {
    const UNINIT: ::core::mem::MaybeUninit<vesta_fr> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<vesta_fr>(),
        32usize,
        concat!("Size of: ", stringify!(vesta_fr))
    );
    assert_eq!(
        ::core::mem::align_of::<vesta_fr>(),
        4usize,
        concat!("Alignment of ", stringify!(vesta_fr))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).limbs) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(vesta_fr),
            "::",
            stringify!(limbs)
        )
    );
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct vesta_fp {
    limbs: [secret_word; 8usize],
}
#[test]
fn bindgen_test_layout_vesta_fp() {
    const UNINIT: ::core::mem::MaybeUninit<vesta_fp> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<vesta_fp>(),
        32usize,
        concat!("Size of: ", stringify!(vesta_fp))
    );
    assert_eq!(
        ::core::mem::align_of::<vesta_fp>(),
        4usize,
        concat!("Alignment of ", stringify!(vesta_fp))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).limbs) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(vesta_fp),
            "::",
            stringify!(limbs)
        )
    );
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct vesta_ec_aff {
    x: vesta_fp,
    y: vesta_fp,
}
#[test]
fn bindgen_test_layout_vesta_ec_aff() {
    const UNINIT: ::core::mem::MaybeUninit<vesta_ec_aff> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<vesta_ec_aff>(),
        64usize,
        concat!("Size of: ", stringify!(vesta_ec_aff))
    );
    assert_eq!(
        ::core::mem::align_of::<vesta_ec_aff>(),
        4usize,
        concat!("Alignment of ", stringify!(vesta_ec_aff))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).x) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(vesta_ec_aff),
            "::",
            stringify!(x)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).y) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(vesta_ec_aff),
            "::",
            stringify!(y)
        )
    );
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct vesta_ec_jac {
    x: vesta_fp,
    y: vesta_fp,
    z: vesta_fp,
}
